unpackaged/main/default/objects/Energy_Efficiency_Product__c/Energy_Efficiency_Product__c.object-meta.xml
<CustomObject>
    <label>Energy Efficiency Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Energy EfficiencyProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>