unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/Energy_Efficiency_Price__c.field-meta.xml
<CustomField>
    <fullName>Energy_Efficiency_Price__c</fullName>
    <label>Energy Efficiency Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>