unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/Energy_Efficiency_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Energy_Efficiency_Quantity__c</fullName>
    <label>Energy Efficiency Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>