unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/Finance_Type__c.field-meta.xml
<CustomField>
    <fullName>Finance_Type__c</fullName>
    <label>Finance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Financed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>