unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/Install_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Complete_Date__c</fullName>
    <label>Install Complete Date</label>
    <type>Date</type>
</CustomField>