unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/LED_Yearly_Savings_kWh__c.field-meta.xml
<CustomField>
    <fullName>LED_Yearly_Savings_kWh__c</fullName>
    <label>LED Yearly Savings(kWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>