unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/No_of_Thermostates__c.field-meta.xml
<CustomField>
    <fullName>No_of_Thermostates__c</fullName>
    <label>No of Thermostates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>