unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Energy Efficiency Products</relationshipLabel>
    <relationshipName>Energy_Efficiency_Products</relationshipName>
    <type>Lookup</type>
</CustomField>