unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/Order_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Delivered_Date__c</fullName>
    <label>Order Delivered Date</label>
    <type>Date</type>
</CustomField>