unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/Order_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Received_Date__c</fullName>
    <label>Order Received Date</label>
    <type>Date</type>
</CustomField>