unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/Order_Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipped_Date__c</fullName>
    <label>Order Shipped Date</label>
    <type>Date</type>
</CustomField>