unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/Referral_Redeemed_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Redeemed_Date__c</fullName>
    <label>Referral Redeemed Date</label>
    <type>Date</type>
</CustomField>