unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/Total_Energy_Efficiency_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Energy_Efficiency_Price__c</fullName>
    <formula>Energy_Efficiency_Quantity__c  *  Energy_Efficiency_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Energy Efficiency Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>