unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/Total_LED_Bulbs_Replaced__c.field-meta.xml
<CustomField>
    <fullName>Total_LED_Bulbs_Replaced__c</fullName>
    <formula>X40_W_Bulbs__c +  X60_W_Bulbs__c +   X75_W_Bulbs__c   +  X100_W_Bulbs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total LED Bulbs Replaced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>