unpackaged/main/default/objects/Energy_Efficiency_Product__c/fields/X40_W_Bulbs__c.field-meta.xml
<CustomField>
    <fullName>X40_W_Bulbs__c</fullName>
    <label>40 W Bulbs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>